src/test/deca/context/invalid/sansObj/readfloat-bool.deca
// Description:
//          Affectation d'un readFloat() à un booléen
//
// Résultat:
//right value float expected boolean
{
    boolean bool;
    bool = readFloat();
}
